# polyrand

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/polyrand/: api.h  create_rng.hpp  d_interface.hpp  device.cpp  device.hpp  domain.cpp  domain.hpp  polyrand-c.cpp  polyrand.h  rng.cpp  rng.hpp  rng_interface.cpp  rng_interface.hpp  trng.hpp
example/: CMakeLists.txt  cpp-example.cpp
scratch/: CMakeLists.txt  scratch.cpp
test/: CMakeLists.txt
